[package]
name = "composing"
version = "0.1.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Tools to compose functions"
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/composing"
categories = ["rust-patterns"] # https://crates.io/category_slugs
keywords = ["compose", "composition", "function", "fp", "macro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
